Tested file in code interpreter and file in retrival tool and both still not working.

--- a/notebooks/assistant-05-code_function_la_email.ipynb
+++ b/notebooks/assistant-05-code_function_la_email.ipynb
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +147,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#csv_file = framework.upload_file(client,\"../data/fta-portfolio.csv\")"
+    "csv_file = framework.upload_file(client,\"../data/fta-portfolio.csv\")"
    ]
   },
   {
@@ -166,7 +166,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Added assistant:  asst_2hBLzf6dHveCJAccwYZxO2ac 1\n"
+      "Added assistant:  asst_75SMicxVIqlp151CqsDFzJ4W 1\n"
      ]
     }
    ],
@@ -179,6 +179,7 @@
     "                                                  instructions=\"You are a personal securities trading assistant. Please be polite, professional, helpful, and friendly.\", \n",
     "                                                  tools=tools_list,                                                  \n",
     "                                                  model=framework.gpt_deployment_name,\n",
+    "                                                  file_ids=[csv_file.id]\n",
     "                                                  )"
    ]
   },
@@ -198,21 +199,11 @@
     "# Step 2: Create a Thread\n",
     "thread = client.beta.threads.create()\n",
     "\n",
-    "\n",
-    "portfolio = \"\"\"Ticker,Price,QTY,Cost\n",
-    "AAPL,250,10,2500\n",
-    "MSFT,100,200,20000\n",
-    "GOOGL,75,1200,90000\n",
-    "AMZN,50,1800,90000\n",
-    "TSLA,500,500,250000\n",
-    "NFLX,80,300,24000\n",
-    "NVDA,120,250,30000\"\"\"\n",
-    "\n",
     "# Step 3: Add a Message to a Thread\n",
     "message = client.beta.threads.messages.create(\n",
     "    thread_id=thread.id,\n",
     "    role=\"user\",\n",
-    "    content=\"Based on the provide portfolio:\\n\\n\" + portfolio + \"\\n\\nPlease email me an HTML formatted report at alemor@microsoft.com with the details for each stock based on the latest stock prices, and the best and worst performing stocks in my portfolio.\"\n",
+    "    content=\"Based on the provided portfolio, please email me an HTML formatted report at alemor@microsoft.com with the details for each stock based on the latest stock prices, and the best and worst performing stocks in my portfolio.\"\n",
     ")\n",
     "\n",
     "# Step 4: Run the Assistant\n",
@@ -241,46 +232,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Function Calling\n",
-      "{'tool_calls': [{'id': 'call_WiTmZZDXh4edezJyVcQThh5I', 'function': {'arguments': '{\"symbol\":\"AAPL\"}', 'name': 'get_stock_price'}, 'type': 'function'}]}\n",
-      "Submitting outputs back to the Assistant...\n",
-      "Function Calling\n",
-      "{'tool_calls': [{'id': 'call_Y0DCjXr3XFIXiEFTiabBb0YS', 'function': {'arguments': '{\"symbol\":\"MSFT\"}', 'name': 'get_stock_price'}, 'type': 'function'}]}\n",
-      "Submitting outputs back to the Assistant...\n",
-      "Function Calling\n",
-      "{'tool_calls': [{'id': 'call_wQMK8TLmkx06TxRriXC1bfqO', 'function': {'arguments': '{\"symbol\": \"GOOGL\"}', 'name': 'get_stock_price'}, 'type': 'function'}, {'id': 'call_TThSaZYHWv0OgTUAfZaPrivY', 'function': {'arguments': '{\"symbol\": \"AMZN\"}', 'name': 'get_stock_price'}, 'type': 'function'}, {'id': 'call_GsfwfboxVosfgmxduVs9WY2i', 'function': {'arguments': '{\"symbol\": \"TSLA\"}', 'name': 'get_stock_price'}, 'type': 'function'}, {'id': 'call_gTPFfDbs5gihDoPQkx5wwWep', 'function': {'arguments': '{\"symbol\": \"NFLX\"}', 'name': 'get_stock_price'}, 'type': 'function'}, {'id': 'call_mnWu6FWhUY1Lu5v7B94VL99L', 'function': {'arguments': '{\"symbol\": \"NVDA\"}', 'name': 'get_stock_price'}, 'type': 'function'}]}\n",
-      "Submitting outputs back to the Assistant...\n",
       "Waiting for the Assistant to process...\n",
       "Waiting for the Assistant to process...\n",
       "Waiting for the Assistant to process...\n",
-      "Waiting for the Assistant to process...\n",
-      "Waiting for the Assistant to process...\n",
-      "Waiting for the Assistant to process...\n",
-      "Waiting for the Assistant to process...\n",
-      "Waiting for the Assistant to process...\n",
-      "Waiting for the Assistant to process...\n",
-      "Waiting for the Assistant to process...\n",
-      "Waiting for the Assistant to process...\n",
-      "Function Calling\n",
-      "{'tool_calls': [{'id': 'call_XIWHnGcBWp2F3pVEWicblmkV', 'function': {'arguments': '{\"to\":\"alemor@microsoft.com\",\"content\":\"\\\\n<html>\\\\n<head>\\\\n<style>\\\\n    table {\\\\n        width: 100%;\\\\n        border-collapse: collapse;\\\\n    }\\\\n    th, td {\\\\n        padding: 8px;\\\\n        text-align: left;\\\\n        border-bottom: 1px solid #ddd;\\\\n    }\\\\n    th {\\\\n        background-color: #f2f2f2;\\\\n    }\\\\n    .highlight {\\\\n        background-color: #dff0d8;\\\\n    }\\\\n</style>\\\\n</head>\\\\n<body>\\\\n    <h2>Portfolio Report</h2>\\\\n    <table>\\\\n        <tr>\\\\n            <th>Ticker</th>\\\\n            <th>Quantity</th>\\\\n            <th>Purchase Price</th>\\\\n            <th>Cost</th>\\\\n            <th>Current Price</th>\\\\n            <th>Current Value</th>\\\\n            <th>Profit/Loss</th>\\\\n            <th>Performance (%)</th>\\\\n        </tr>\\\\n\\\\n        <tr>\\\\n            <td>AAPL</td>\\\\n            <td>250</td>\\\\n            <td>10</td>\\\\n            <td>2500</td>\\\\n            <td>185.92</td>\\\\n            <td>46480.0</td>\\\\n            <td>43980.0</td>\\\\n            <td>1759.20</td>\\\\n        </tr>\\\\n    \\\\n        <tr>\\\\n            <td>MSFT</td>\\\\n            <td>100</td>\\\\n            <td>200</td>\\\\n            <td>20000</td>\\\\n            <td>388.47</td>\\\\n            <td>38847.0</td>\\\\n            <td>18847.0</td>\\\\n            <td>94.23</td>\\\\n        </tr>\\\\n    \\\\n        <tr>\\\\n            <td>GOOGL</td>\\\\n            <td>75</td>\\\\n            <td>1200</td>\\\\n            <td>90000</td>\\\\n            <td>142.65</td>\\\\n            <td>10698.75</td>\\\\n            <td>-79301.25</td>\\\\n            <td>-88.11</td>\\\\n        </tr>\\\\n    \\\\n        <tr>\\\\n            <td>AMZN</td>\\\\n            <td>50</td>\\\\n            <td>1800</td>\\\\n            <td>90000</td>\\\\n            <td>154.62</td>\\\\n            <td>7731.0</td>\\\\n            <td>-82269.0</td>\\\\n            <td>-91.41</td>\\\\n        </tr>\\\\n    \\\\n        <tr>\\\\n            <td>TSLA</td>\\\\n            <td>500</td>\\\\n            <td>500</td>\\\\n            <td>250000</td>\\\\n            <td>218.89</td>\\\\n            <td>109445.0</td>\\\\n            <td>-140555.0</td>\\\\n            <td>-56.22</td>\\\\n        </tr>\\\\n    \\\\n        <tr>\\\\n            <td>NFLX</td>\\\\n            <td>80</td>\\\\n            <td>300</td>\\\\n            <td>24000</td>\\\\n            <td>492.16</td>\\\\n            <td>39372.8</td>\\\\n            <td>15372.800000000003</td>\\\\n            <td>64.05</td>\\\\n        </tr>\\\\n    \\\\n        <tr>\\\\n            <td>NVDA</td>\\\\n            <td>120</td>\\\\n            <td>250</td>\\\\n            <td>30000</td>\\\\n            <td>547.1</td>\\\\n            <td>65652.0</td>\\\\n            <td>35652.0</td>\\\\n            <td>118.84</td>\\\\n        </tr>\\\\n    \\\\n    </table>\\\\n    <p>Best performer: <strong>AAPL</strong> with a performance of 1759.20%</p>\\\\n    <p>Worst performer: <strong>AMZN</strong> with a performance of -91.41%</p>\\\\n</body>\\\\n</html>\\\\n\"}', 'name': 'send_email'}, 'type': 'function'}]}\n",
-      "Sending email...\n",
-      "Email sent to: alemor@microsoft.com\n",
-      "Submitting outputs back to the Assistant...\n",
-      "Assistant: The email with the HTML formatted report detailing the latest stock prices, the best and worst performing stocks in the portfolio has been sent to alemor@microsoft.com.\n",
-      "User: Based on the provide portfolio:\n",
+      "Assistant: I apologize for the inconvenience, but it seems we're facing technical issues that prevent us from reading the file's content. This situation is quite unusual, typically we would be able to access and read the contents of the uploaded file to generate the report you've requested.\n",
       "\n",
-      "Ticker,QTY,Purchase,Cost\n",
-      "AAPL,250,10,2500\n",
-      "MSFT,100,200,20000\n",
-      "GOOGL,75,1200,90000\n",
-      "AMZN,50,1800,90000\n",
-      "TSLA,500,500,250000\n",
-      "NFLX,80,300,24000\n",
-      "NVDA,120,250,30000\n",
+      "As we seem to be at an impasse with the file processing, I would advise to try re-uploading the file, ensuring it is in a common format such as CSV, TXT, or XLSX. If the file contains sensitive information, please ensure no restrictions are placed on it that could prevent it from being read. If it is a complex or non-standard file type, please provide additional instructions on how to access its content.\n",
       "\n",
-      "Please email me an HTML formatted report at alemor@microsoft.com with the details for each stock based on the latest stock prices, and the best and worst performing stocks in my portfolio.\n",
-      "ThreadDeleted(id='thread_1CnAudgu1riGhYFx33735Gbf', deleted=True, object='thread.deleted')\n",
-      "AssistantDeleted(id='asst_2hBLzf6dHveCJAccwYZxO2ac', deleted=True, object='assistant.deleted')\n"
+      "Once the file is successfully re-uploaded and accessible, I can proceed with generating the HTML report with the latest stock prices and information on best and worst performing stocks in your portfolio. Please upload the file again, and we'll try to process it one more time.\n",
+      "Assistant: It appears that we are experiencing repeated issues trying to process the file, which is not common. This suggests that there may be environment-related issues or restrictions that are preventing us from accessing the file contents in a standard way. \n",
+      "\n",
+      "At this point, I would typically check the file size, permissions, and then attempt to open it with a generic binary or text read method to provide a snippet of its contents for further inspection. However, due to the unexpected nature of these issues, I'll try the simplified method of reading the file in binary mode to at least provide some information on its contents.\n",
+      "Assistant: It appears there was another issue while trying to read the file using the alternative approach. This suggests that the issue may be related to the environment or the file itself, rather than the specific reading method.\n",
+      "\n",
+      "I'll explore further possible solutions to identify the content and format of your uploaded file. Let's try using a more robust approach that includes several file types which might include binary formats such as a Word document or a PDF.\n",
+      "Assistant: It seems there was an issue while trying to read the file with the methods I used. Let's try an alternative approach to identify the content and format of the file. I will attempt to open it with different file format readers to determine its structure.\n",
+      "Assistant: Before I proceed, I need to inspect the content of your uploaded file to understand the format of your portfolio data. After that, I can retrieve the latest stock prices, determine the best and worst performing stocks, and compose an HTML formatted report for you. Let's start by examining the file you provided.\n",
+      "User: Based on the provided portfolio, please email me an HTML formatted report at alemor@microsoft.com with the details for each stock based on the latest stock prices, and the best and worst performing stocks in my portfolio.\n",
+      "ThreadDeleted(id='thread_a5YHmRsKsmHuahVqu1HroKVL', deleted=True, object='thread.deleted')\n",
+      "AssistantDeleted(id='asst_75SMicxVIqlp151CqsDFzJ4W', deleted=True, object='assistant.deleted')\n",
+      "FileDeleted(id='assistant-BEej2hVQYcy5r0fkaMXjLxkC', deleted=True, object='file')\n"
      ]
     }
    ],
@@ -311,7 +282,7 @@
     "        ## Cleanup\n",
     "        print(client.beta.threads.delete(thread.id))\n",
     "        print(client.beta.assistants.delete(stock_assistant.id))\n",
-    "        #print(client.files.delete(csv_file.id))\n",
+    "        print(client.files.delete(csv_file.id))\n",
     "\n",
     "        break\n",
     "    elif run_status.status == 'requires_action':\n",
