Updated the assistants. Renamed assistant05 to 06. Assitant 05 now reads the content of a file and uses the file contents in a prompt.

--- a/notebooks/assistant-01-code_interpreter.ipynb
+++ b/notebooks/assistant-01-code_interpreter.ipynb
@@ -7,7 +7,10 @@
     "# Assistant-01<br/>The OpenAI reference demo\n",
     "\n",
     "Reference:\n",
-    "- https://platform.openai.com/docs/assistants/overview\n",
+    "\n",
+    "- [Assistants OpenAI Overview](https://platform.openai.com/docs/assistants/overview)\n",
+    "- [Assistant demo notebook](https://github.com/openai/openai-python/blob/main/examples/assistant.py)\n",
+    "\n",
     "\n",
     "### Get an OpenAI client\n",
     "\n",
