Updated the assistants 01.

--- a/notebooks/assistant-01-code_interpreter.ipynb
+++ b/notebooks/assistant-01-code_interpreter.ipynb
@@ -9,7 +9,7 @@
     "Reference:\n",
     "\n",
     "- [Assistants OpenAI Overview](https://platform.openai.com/docs/assistants/overview)\n",
-    "- [Assistant demo notebook](https://github.com/openai/openai-python/blob/main/examples/assistant.py)\n",
+    "- [Github-OpenAI Python/examples/Assistant demo notebook](https://github.com/openai/openai-python/blob/main/examples/assistant.py)\n",
     "\n",
     "\n",
     "### Get an OpenAI client\n",
