Updated assistant-10. Retrieval working, but not making function calls.

--- a/notebooks/assistant-01-code_interpreter.ipynb
+++ b/notebooks/assistant-01-code_interpreter.ipynb
@@ -69,7 +69,7 @@
     {
      "data": {
       "text/plain": [
-       "Thread(id='thread_w2P4RmMnr5rocMVEHCoYKHMp', created_at=1705357364, metadata={}, object='thread')"
+       "Thread(id='thread_v3PPhTLrICXiKqbkmrhHWCLb', created_at=1705420489, metadata={}, object='thread')"
       ]
      },
      "execution_count": 3,
@@ -97,7 +97,7 @@
     {
      "data": {
       "text/plain": [
-       "ThreadMessage(id='msg_4jqAAdkID4k4QgPdI4q29Bts', assistant_id=None, content=[MessageContentText(text=Text(annotations=[], value='What is the 1001st prime number. Can you help me?'), type='text')], created_at=1705357368, file_ids=[], metadata={}, object='thread.message', role='user', run_id=None, thread_id='thread_w2P4RmMnr5rocMVEHCoYKHMp')"
+       "ThreadMessage(id='msg_ZYtGoq8RQqtr8oNW2mwksKp2', assistant_id=None, content=[MessageContentText(text=Text(annotations=[], value='What is the 1001st prime number. Can you help me?'), type='text')], created_at=1705420490, file_ids=[], metadata={}, object='thread.message', role='user', run_id=None, thread_id='thread_v3PPhTLrICXiKqbkmrhHWCLb')"
       ]
      },
      "execution_count": 4,
@@ -187,7 +187,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "assistant The 1001st prime number is 7927.\n",
+      "assistant The 1001st prime number is 7927. If you need any more assistance with prime numbers or any other inquiries, feel free to ask!\n",
+      "assistant It looks like the upper bound estimate was too low. I'll adjust the estimate and try again to find the 1001st prime number. Let's recalculate this.\n",
       "user What is the 1001st prime number. Can you help me?\n"
      ]
     }
@@ -221,8 +222,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Assistant(id='asst_4uL6U8lq2BP2xg7fuzl89M6h', created_at=1705357361, description=None, file_ids=[], instructions='You are a personal math tutor. Write and run code to answer math questions.', metadata={}, model='gpt-4-turbo-test', name='Math Tutor', object='assistant', tools=[ToolCodeInterpreter(type='code_interpreter')])\n",
-      "Assistant(id='asst_hUYZJhA1GgPOjYyaD0arb1zr', created_at=1705189970, description=None, file_ids=[], instructions='You are a personal securities trading assistant. Please be polite, professional, helpful, and friendly.', metadata={}, model='gpt-4-turbo-test', name='fta-Securities Trading Assistant', object='assistant', tools=[ToolFunction(function=FunctionDefinition(name='get_stock_price', description='Retrieve the latest closing price of a stock using its ticker symbol', parameters={'type': 'object', 'properties': {'symbol': {'type': 'string', 'description': 'The ticker symbol of the stock'}}, 'required': ['symbol']}), type='function'), ToolFunction(function=FunctionDefinition(name='send_email', description='sends an email to a recipient(s).', parameters={'type': 'object', 'properties': {'to': {'type': 'string', 'description': 'The email(s) the email should be sent to.'}, 'content': {'type': 'string', 'description': 'The content of the email.'}}, 'required': ['to', 'content']}), type='function')])\n"
+      "Assistant(id='asst_reOUmTgV7R8YcBhAwYJGurNj', created_at=1705420489, description=None, file_ids=[], instructions='You are a personal math tutor. Write and run code to answer math questions.', metadata={}, model='gpt4-1106-fta-assistants', name='Math Tutor', object='assistant', tools=[ToolCodeInterpreter(type='code_interpreter')])\n",
+      "Assistant(id='asst_4uL6U8lq2BP2xg7fuzl89M6h', created_at=1705357361, description=None, file_ids=[], instructions='You are a personal math tutor. Write and run code to answer math questions.', metadata={}, model='gpt-4-turbo-test', name='Math Tutor', object='assistant', tools=[ToolCodeInterpreter(type='code_interpreter')])\n"
      ]
     }
    ],
