--- a/notebooks/assistant-04-function_la_email.ipynb
+++ b/notebooks/assistant-04-function_la_email.ipynb
@@ -28,7 +28,6 @@
    "outputs": [],
    "source": [
     "import time\n",
-    "import requests\n",
     "import oaihelper as framework\n",
     "import yfinance as yf\n",
     "\n",
@@ -56,26 +55,6 @@
     "    stock = yf.Ticker(symbol)\n",
     "    price = stock.history(period=\"1d\")['Close'].iloc[-1]    \n",
     "    return price\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Use a Logic App HTTP POST trigger to email using Outlook"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def send_email(json_payload):\n",
-    "    headers = {'Content-Type': 'application/json'}\n",
-    "    response = requests.post(framework.email_URI, json=json_payload, headers=headers)\n",
-    "    if response.status_code == 202:\n",
-    "        print(\"Email sent to: \" + json_payload['to'])  "
    ]
   },
   {
@@ -339,7 +318,7 @@
     "                print(\"Sending email...\")\n",
     "                email_to = arguments['to']\n",
     "                email_content = arguments['content']\n",
-    "                send_email({'to': email_to,'content':email_content})\n",
+    "                framework.send_email({'to': email_to,'content':email_content})\n",
     "                \n",
     "                tool_outputs.append({\n",
     "                    \"tool_call_id\": action['id'],\n",
