--- a/notebooks/assistant-06-code_function_la_email.ipynb
+++ b/notebooks/assistant-06-code_function_la_email.ipynb
@@ -69,26 +69,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Use a Logic App HTTP POST trigger to email using Outlook"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def send_post_request(json_payload):\n",
-    "    headers = {'Content-Type': 'application/json'}\n",
-    "    response = requests.post(framework.email_URI, json=json_payload, headers=headers)\n",
-    "    if response.status_code == 202:\n",
-    "        print(\"Email sent to: \" + json_payload['to'])  "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### Prepare the tools for function calling"
    ]
   },
@@ -305,7 +285,7 @@
     "                print(\"Sending email...\")\n",
     "                email_to = arguments['to']\n",
     "                email_content = arguments['content']\n",
-    "                send_post_request({'to': email_to,'content':email_content})\n",
+    "                framework.send_email({'to': email_to,'content':email_content})\n",
     "                \n",
     "                tool_outputs.append({\n",
     "                    \"tool_call_id\": action['id'],\n",
