--- a/notebooks/assistant-05-code_function_la_email_preread.ipynb
+++ b/notebooks/assistant-05-code_function_la_email_preread.ipynb
@@ -32,7 +32,6 @@
    "outputs": [],
    "source": [
     "import time\n",
-    "import requests\n",
     "import oaihelper as framework\n",
     "import yfinance as yf\n",
     "\n",
@@ -63,26 +62,6 @@
     "        return price\n",
     "    except:\n",
     "        return 0"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Use a Logic App HTTP POST trigger to email using Outlook"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def send_post_request(json_payload):\n",
-    "    headers = {'Content-Type': 'application/json'}\n",
-    "    response = requests.post(framework.email_URI, json=json_payload, headers=headers)\n",
-    "    if response.status_code == 202:\n",
-    "        print(\"Email sent to: \" + json_payload['to'])  "
    ]
   },
   {
@@ -326,7 +305,7 @@
     "                print(\"Sending email...\")\n",
     "                email_to = arguments['to']\n",
     "                email_content = arguments['content']\n",
-    "                send_post_request({'to': email_to,'content':email_content})\n",
+    "                framework.send_email({'to': email_to,'content':email_content})\n",
     "                \n",
     "                tool_outputs.append({\n",
     "                    \"tool_call_id\": action['id'],\n",
